--- a/exchange.cabal
+++ b/exchange.cabal
@@ -58,6 +58,7 @@ executable exchange
                        blaze-html            >= 0.6.1.2    && < 0.7,
                        blaze-markup          >= 0.5.1.6    && < 0.6,
                        bcrypt                >= 0.0.4      && < 0.1,
+                       http-types            >= 0.8.3      && < 0.9,
                        bytestring            -any,
                        containers            -any,
                        text                  -any,
